# Aiba-nx

./: .gitignore  CMakeLists.txt  build.bat  config.mk
.github/workflows/: main.yml
source/GameEngine/: externals.cpp  il2cpp-api.h  il2cpp.h
source/GameEngine/Game/: RootNode.h
source/GameEngine/System/: Action.h  Delegate.h  MulticastDelegate.h  Nullable.h  Primitives.h  RuntimeTypeHandle.h  String.h  Type.h  _Object.h
source/GameEngine/System/Action/: AsyncOperation.h
source/GameEngine/System/Collections/Generic/: Dictionary.h  List.h
source/GameEngine/System/Text/: Encoding.h  UTF8Encoding.h
source/GameEngine/UnityEngine/: AsyncOperation.h  Behaviour.h  Bounds.h  Color.h  Color32.h  Component.h  DrivenRectTransformTracker.h  GameObject.h  MonoBehaviour.h  RectTransform.h  Transform.h  Vector2.h  Vector2Int.h  Vector3.h  YieldInstruction.h  _Object.h
source/GameEngine/UnityEngine/EventSystems/: UIBehaviour.h
source/GameEngine/UnityEngine/Events/: UnityAction.h
source/GameEngine/UnityEngine/SceneManagement/: Scene.h  SceneManager.h
source/GameEngine/UnityEngine/UI/: Graphic.h  HorizontalLayoutGroup.h  HorizontalOrVerticalLayoutGroup.h  Image.h  LayoutGroup.h  ListPool.h  MaskableGraphic.h  ScrollRect.h
source/Hato/: Hato.hpp
source/Hato/fs/: fs.cpp  fs.hpp
source/Hato/logger/: SdLogger.cpp  SdLogger.hpp
source/lib/hook/: replace.hpp  trampoline.hpp
source/nn/: fs.hpp  ro.h
source/nn/fs/: fs_files.hpp  fs_filesystem.hpp  fs_mount.hpp
source/program/: main.cpp
src/program/: main.cpp
